examples/v1alpha1/simple-gateway/gateway.yaml
#Used in
# - site-src/v1alpha1/guides/traffic-splitting.md
# - site-src/v1alpha1/guides/simple-gateway.md
 
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: acme-lb
  listeners:  
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          gateway: prod-web-gw
