examples/v1alpha1/simple-gateway/httproute.yaml
# Used in
# - site-src/v1alpha1/guides/simple-gateway.md

apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: foo
  labels:
    gateway: prod-web-gw
spec:
  rules:
  - forwardTo:
    - serviceName: foo-svc
      port: 8080
